--- a/Proyecto_Arandanos/SisProduccion/SisProduccion/SisProduccion.vbproj
+++ b/Proyecto_Arandanos/SisProduccion/SisProduccion/SisProduccion.vbproj
@@ -108,6 +108,12 @@
     <Compile Include="FLogin.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="FormLoginPractica.Designer.vb">
+      <DependentUpon>FormLoginPractica.vb</DependentUpon>
+    </Compile>
+    <Compile Include="FormLoginPractica.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="FPuesto.Designer.vb">
       <DependentUpon>FPuesto.vb</DependentUpon>
     </Compile>
@@ -149,6 +155,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FLogin.resx">
       <DependentUpon>FLogin.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormLoginPractica.resx">
+      <DependentUpon>FormLoginPractica.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FPuesto.resx">
       <DependentUpon>FPuesto.vb</DependentUpon>
